--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -14,6 +14,13 @@ DOCTYPE <!DOCTYPE html>
         <a href="Register.html"></a>
         <a href="Contact.html"></a>
     </nav>
-  </header>  
+  </header> 
+  <main>
+    <section>
+      <p>This is an event where tecn smart people from around the world come together to know themselves</p>
+      <video src="https://youtu.be/Q9mLSuJQ2Rw">Techcon Systems TS5322 Miniature Spool Valve</video>
+    </section>
+  </main>
+  <footer>&copy;Techcon webinar 2024</footer> 
 </body>
 </html>
