--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -22,6 +22,6 @@ DOCTYPE <!DOCTYPE html>
     <video src="https://youtu.be/Q9mLSuJQ2Rw">Techcon Systems TS5322 Miniature Spool Valve</video>
 
   </main>
-  <footer>&copy;Techcon webinar 2024</footer> 
+  <footer>&copy; Copyright Techcon webinar 2024</footer> 
 </body>
 </html>
