--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -19,7 +19,7 @@ DOCTYPE <!DOCTYPE html>
     <section>
       <p>This is an event where tecn smart people from around the world come together to know themselves</p>
     </section>
-    <video src="https://youtu.be/Q9mLSuJQ2Rw">Techcon Systems TS5322 Miniature Spool Valve</video>
+    <video controls="https://youtu.be/Q9mLSuJQ2Rw">Techcon Systems TS5322 Miniature Spool Valve</video>
 
   </main>
   <footer>&copy; Copyright Techcon webinar 2024</footer> 
