--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -17,16 +17,16 @@
     </header>
     <main>
         <article>
-            <h2>history</h2>
+            <h2>"history"</h2>
             <p>the origin and evolution of the techcon is as follows</p>
             <img src="https://unsplash.com/photos/people-in-conference-nwLTVwb7DbU" alt=" A techcon meeting">
             <Section>
-                <h2>mission</h2>
+                <h2>"mission"</h2>
                 <p>the purpose to the conference is to come together as one to build the technology in the world</p>
                 <img src="https://images.app.goo.gl/SjYYqB3NgZ8XNsdCA" alt="image shows that nothing is impossible">
             </Section>
             <section>
-                <h2>past speakers</h2>
+                <h2>"past speakers"</h2>
                 <img src="https://www.shutterstock.com/image-photo/motivational-speaker-headset-performing-on-stage-2191246753" alt=" speaker tom hud">
                 <img src="https://www.shutterstock.com/image-photo/motivational-speaker-microphone-performing-on-stage-2191246751" alt=" speaker vanessa michaels 2023">
             </section>
