--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -17,6 +17,7 @@
     </header>
     <main>
         <article>
+            <h1>["History", "Mission", "Past Speakers"]</h1>
             <h2>"history"</h2>
             <p>the origin and evolution of the techcon is as follows</p>
             <img src="https://unsplash.com/photos/people-in-conference-nwLTVwb7DbU" alt=" A techcon meeting">
