--- a/techcon_website/Schedule.html
+++ b/techcon_website/Schedule.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <h1>schedule.html</h1>
         <h1>Schedule for Techcon 2024</h1>
         <nav>
             <a href="index.html"> home page</a>
