--- a/techcon_website/Schedule.html
+++ b/techcon_website/Schedule.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+DOCTYPE <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,12 @@
 </head>
 <body>
     <header>
-        <h1>schedule.html</h1>
         <h1>Schedule for Techcon 2024</h1>
         <nav>
             <a href="index.html"> home page</a>
-            <a href="about.html"> About page</a>
-            <a href="Register.html"> Register</a>
-            <a href="Contact.html"> Contact</a>
+            <a href="about.html"> about page</a>
+            <a href="Register"> Register</a>
+            <a href="Contact"> Contact</a>
         </nav>
     </header>
     <main>
@@ -21,25 +20,25 @@
             <th scope="col">Time</th>
             <th scope="col">Session</th>
             <th scope="col">Speaker</th>
-<tr>
-    <td>11am</td>
-    <td>history</td>
-    <td> john beck</td>
-</tr>
-<tr>
-    <td>1pm</td>
-    <td>mission</td>
-    <td>lisa moro</td>
-</tr>
-<tr>
-    <td>2pm</td>
-    <td>speaker</td>
-    <td>cast filly</td>
-</tr>
+            <tr>
+                <td>11am</td>
+                <td>history</td>
+                <td>John beck</td>
+            </tr>
+            <tr>
+                <td>1pm</td>
+                <td>mission</td>
+                <td>lisa moro</td>
+            </tr>
+            <tr>
+                <td>2pm</td>
+                <td>Speaker</td>
+                <td>cest filly</td>
+            </tr>
         </table>
         <caption>Detailed schedule of the event</caption>
     </main>
-    <footer>&copy; Copyright Techcon webinar 2024</footer>
+    <footer>&copy; Copyright TechCon webinar 2024</footer>
     
 </body>
 </html>
