--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -9,10 +9,10 @@ DOCTYPE <!DOCTYPE html>
     <header>
         <h1>Schedule for Techcon 2024</h1>
         <nav>
-            <a href="index.html"> home page</a>
-            <a href="about.html"> about page</a>
-            <a href="Register"> Register</a>
-            <a href="Contact"> Contact</a>
+            <a href="index.html">home page</a>
+            <a href="about.html">about page</a>
+            <a href="Register.html">Register</a>
+            <a href="Contact.html">Contact</a>
         </nav>
     </header>
     <main>
@@ -36,7 +36,9 @@ DOCTYPE <!DOCTYPE html>
                 <td>cest filly</td>
             </tr>
         </table>
-        <caption>Detailed schedule of the event</caption>
+        <caption>
+            <h2>Detailed schedule of the event</h2>
+        </caption>
     </main>
     <footer>&copy; Copyright TechCon webinar 2024</footer>
     
