--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -41,7 +41,7 @@ DOCTYPE <!DOCTYPE html>
         </table>
 
     </main>
-    <footer>&copy; Copyright TechCon webinar 2024</footer>
+    <footer>&copy;copyright TechCon webinar 2024</footer>
     
 </body>
 </html>
