--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,7 +18,7 @@ DOCTYPE <!DOCTYPE html>
     <main>
         <table>
             <caption>
-                <h2>Detailed schedule of the event</h2>
+                <h2>Detailed Schedule of Event for Techcon 2024</h2>
             </caption>
             <th scope="col">Time</th>
             <th scope="col">Session</th>
