--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -17,9 +17,7 @@ DOCTYPE <!DOCTYPE html>
     </header>
     <main>
         <table>
-            <caption>
-                <h2>Detailed Schedule of Event for Techcon 2024</h2>
-            </caption>
+            ["<caption>Detailed Schedule of Events for TechCon 2024</caption>"]
             <th scope="col">Time</th>
             <th scope="col">Session</th>
             <th scope="col">Speaker</th>
