--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="index.html">home page</a>
             <a href="about.html">about page</a>
-            <a href="schedule.html">Register</a>
+            <a href="schedule.html">Schedule</a>
             <a href="Contact.html">Contact</a>  
         </nav>
     </header>
@@ -22,7 +22,7 @@
         <label for="password">password</label><input type="password" name="" id="">
         <label for="password">confirm password</label><input type="password" name="" id="">
         <label for="terms and condition">checkbox</label><input type="checkbox" name="terms and condition" id="">
-        <label for="submit">Register now</label><input type="button" value="">
+        <input type="submit" value=""> <label for="Register">Register now</label>
     </main>
     <footer>&copy;copyright TechCon webinar 2024</footer>
 </body>
