--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -22,7 +22,7 @@
         <label for="password">password</label><input type="password" name="" id="">
         <label for="password">confirm password</label><input type="password" name="" id="">
         <label for="terms and condition">checkbox</label><input type="checkbox" name="terms and condition" id="">
-        <button\s+type=['\"]submit['\"]>
+        <button type="submit"
         <label for="Register">Register now</label>
     </main>
     <footer>&copy;copyright TechCon webinar 2024</footer>
